--- a/Firmware/MPS Tune-o-Matic/.vscode/launch.json
+++ b/Firmware/MPS Tune-o-Matic/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/.pio/build/nanoatmega328new/firmware.elf",
+            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/MPS Tune-o-Matic/.pio/build/nanoatmega328new/firmware.elf",
             "projectEnvName": "nanoatmega328new",
             "toolchainBinDir": "C:/Users/andy/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/.pio/build/nanoatmega328new/firmware.elf",
+            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/MPS Tune-o-Matic/.pio/build/nanoatmega328new/firmware.elf",
             "projectEnvName": "nanoatmega328new",
             "toolchainBinDir": "C:/Users/andy/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/.pio/build/nanoatmega328new/firmware.elf",
+            "executable": "c:/Users/andy/OneDrive/Documents/MPS Tune-o-Matic/trunk/Firmware/MPS Tune-o-Matic/.pio/build/nanoatmega328new/firmware.elf",
             "projectEnvName": "nanoatmega328new",
             "toolchainBinDir": "C:/Users/andy/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
